--- a/public/STYLES/ingreso.css
+++ b/public/STYLES/ingreso.css
@@ -1,4 +1,4 @@
-.wrap{    
+.wrap2{    
     width: 100%;
     height: 50vh;
     display: flex;
@@ -7,4 +7,7 @@
     background: linear-gradient(to Right,rgb(0, 0, 0, .75),rgb(0, 0, 0, .1)),url(/public/ASSETS/IMG/CursosVirtuales.jpg);
     background-size: cover;
     background-position: center;
+}
+.inicioBox{
+    background-color: rgba(11, 48, 66, 255);
 }
