Actualización Entrega4Unidad2

--- a/public/STYLES/ingreso.css
+++ b/public/STYLES/ingreso.css
@@ -9,5 +9,7 @@
     background-position: center;
 }
 .inicioBox{
-    background-color: rgba(11, 48, 66, 255);
+    background-color: rgba(11, 48, 66, 0.8);
+    border-color: white;
+    
 }
