--- a/public/STYLES/ingreso.css
+++ b/public/STYLES/ingreso.css
@@ -1,16 +1,8 @@
 .wrap2{    
-    width: 100%;
-    height: 50vh;
-    display: flex;
-    align-items: center;
-    justify-content: top;
-    background: linear-gradient(to Right,rgb(0, 0, 0, .75),rgb(0, 0, 0, .1)),url(/public/ASSETS/IMG/CursosVirtuales.jpg);
-    background-size: cover;
-    background-position: center;
+    background-image: linear-gradient(to Right,rgb(0, 0, 0, .75),rgb(0, 0, 0, .1)),url(../ASSETS/IMG/CursosVirtuales.jpg);
 }
 .inicioBox{
     background-color: rgba(11, 48, 66, 0.8);
     border-style: double;
-    border-color: white;
-    
+    border-color: white;    
 }
