--- a/public/STYLES/soporte.css
+++ b/public/STYLES/soporte.css
@@ -28,7 +28,7 @@ color: rgba(11, 48, 66, 255);
     display: flex;
     align-items: center;
     justify-content: top;
-    background: linear-gradient(to Right,rgb(0, 0, 0, .75),rgb(0, 0, 0, .1)),url(/public/ASSETS/IMG/Banner.jpg);
+    background: linear-gradient(to Right,rgb(0, 0, 0, .75),rgb(0, 0, 0, .1)),url(../ASSETS/IMG/Banner.jpg);
     background-size: cover;
     background-position: center;
 }
